test: 새로운 Badge 평가 로직에 맞춰 BadgeServiceTest 수정